k8s/kustomization/bases/server/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  labels:
    app: server
spec:
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      restartPolicy: Always
      containers:
        - name: server
          image: starter/server-dev
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: "300m"
              memory: "600Mi"
