k8s/kustomization/bases/server/server-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: server-service
spec:
  type: ClusterIP
  selector:
    app: server
  ports:
    - name: server
      port: 80
      targetPort: 8000
